--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,55 @@
 body {
-  background: blanchedalmond;
-}
+        
+        width:100%;
+        height:100%;
+       
+
+
+      }
+.container{
+        min-height: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        margin: 0%;
+       
+      }
+
+.container div{
+        margin: 10px; 
+       
+      }
+      
+.a{
+        width: 100%;
+        height: 40vh;
+        background: lightgray; 
+        text-align: center;
+      }
+
+.b{
+        width: 75%;
+        height: 60vh;
+        background: lightgray;
+        text-align: center;
+      }
+
+.c{
+      width: 21%;
+      height: 60vh;
+      background: lightgray;
+      text-align: center;
+      }
+
+.container div p{
+        font-family: sans-serif;
+        font-size: 100px;
+      }
+
+ @media screen and (max-width:1000px){ 
+
+      .container div {
+        flex-grow: 1;
+      }
+    }
